Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9405

Regression: Several git actions no longer available in locator

    XMLWordPrintable

Details

    • 2b903b46d37dc54e39b43faffffc60a33a2b9974

    Description

      Since the menu reorganization (09b1cf78 ?), the git actions that are now in the "change-related actions" dialog are no longer available in locator (git show, revert, checkout, cherry-pick).

      That dialog is available through locator, but the usefulness of the git locator integration was to be able to run commands "like on the command line" there.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            pperisin Petar
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes