Git - added dummy locator actions

for Merge, Rebase, Show, Cherry Pick, Revert and Checkout.

Task-number: QTCREATORBUG-9405
Change-Id: I9a10d93382248ca86fe566bf1dccf4d390601aaf
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>